Fixed post <a> style to be more visible.

--- a/styles/post.css
+++ b/styles/post.css
@@ -2,3 +2,8 @@ h1.title
 {
 	margin-bottom: 0px;
 }
+
+.post a
+{
+	text-decoration: underline;
+}
